[gd_scene load_steps=4 format=2]

[ext_resource path="res://scenes/audio/AudioManager/callbacks.gd" type="Script" id=1]
[ext_resource path="res://scenes/audio/AudioManager/song_handler.gd" type="Script" id=2]
[ext_resource path="res://scenes/audio/AudioManager/handler_functions.gd" type="Script" id=4]

[node name="song_handler" type="Node2D"]
pause_mode = 2
script = ExtResource( 2 )

[node name="on_end_callbacks" type="Node2D" parent="."]
script = ExtResource( 1 )

[node name="handler_functions" type="Node2D" parent="."]
script = ExtResource( 4 )
